# geometry_process

./: CMakeLists.txt  GEOMETRY_README.md  README.md
docs/: AsyncMeshProcessor_Usage_Guide.md
geometry/: CMakeLists.txt
geometry/include/: halfedge.h  mesh_converter.h
geometry/src/: halfedge.cpp  mesh_converter.cpp
myWork/: CMakeLists.txt  myWork.cpp  myWork.h
src/hw1/: CMakeLists.txt
src/hw1/include/: mesh_processor.h
src/hw1/src/: hw1.cpp  mesh_processor.cpp
src/hw10/: CMakeLists.txt
src/hw2/: CMakeLists.txt
src/hw2/src/: hw2.cpp  mesh_processor.cpp
src/hw3/: CMakeLists.txt
src/hw3/include/: mesh_processor.h
src/hw3/src/: mesh_processor.cpp
src/hw4/: CMakeLists.txt
src/hw4/src/: mesh_processor.cpp
src/hw5/: CMakeLists.txt
src/hw5/include/: mesh_processor.h
src/hw5/src/: mesh_processor.cpp
src/hw6/: CMakeLists.txt
src/hw6/include/: mesh_processor.h
src/hw6/src/: hw6.cpp  mesh_processor.cpp
src/hw7/: CMakeLists.txt
src/hw7/src/: mesh_processor.cpp
src/hw8/: CMakeLists.txt
src/hw8/include/: mesh_processor.h
src/hw8/src/: mesh_processor.cpp
src/hw9/: CMakeLists.txt
src/hw9/include/: mesh_processor.h
src/hw9/src/: 1.txt  mesh_processor.cpp
src/w2/: CMakeLists.txt
src/w2/src/: w2.cpp
viewer/: CMakeLists.txt  CMakeLists_BACKUP.txt
viewer/include/: async_mesh_processor.h  glwidget.h  mainwindow.h  objloader.h
viewer/shaders/: basic.frag  basic.vert  resources.qrc
viewer/src/: async_mesh_processor.cpp  glwidget.cpp  mainwindow.cpp  objloader.cpp
